--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,7 @@ header {
 .bt-subscribe {
   font-family: inherit;
   font-style: normal;
+  justify-content: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -379,6 +380,7 @@ header {
   fill: var(--color-white);
   margin-left: 16px;
   transition: fill var(--color-white);
+  height: 24px;
 }
 .footer-sub-container {
   margin-left: 80px;
@@ -397,6 +399,7 @@ header {
   border: 1px solid var(--color-white);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: transparent;
 }
 .footer-input::placeholder {
   font-size: 12px;
@@ -740,6 +743,8 @@ body {
   border-radius: 4px;
   padding-left: 38px;
   outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
   border-color: var(--color-iris);
@@ -768,9 +773,12 @@ body {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  display: block;
+  line-height: 1.17;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.04em;
+
   color: var(--color-light-slate);
   margin-bottom: 4px;
 }
@@ -782,6 +790,8 @@ body {
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
+  height: 24px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-comment {
   width: 100%;
