--- a/css/styles.css
+++ b/css/styles.css
@@ -774,7 +774,6 @@ body {
   font-style: normal;
   font-weight: 400;
   display: block;
-  line-height: 1.17;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.04em;
@@ -796,18 +795,16 @@ body {
 .modal-comment {
   width: 100%;
   height: 120px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.04em;
   padding: 8px 16px;
+  resize: none;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
-  resize: none;
+  transition: border-color var(--color-iris);
   outline: transparent;
 }
 .modal-comment:focus {
@@ -851,4 +848,10 @@ body {
   border: 1px solid var(--color-ocean);
   border-radius: 2px;
   fill: var(--color-cloud);
+}
+.modal-check-box {
+  margin-bottom: 24px;
+}
+.modal-coment {
+  margin-bottom: 16px;
 }
